[gd_scene load_steps=10 format=3 uid="uid://ch18sdar3hvkd"]

[ext_resource type="Script" uid="uid://c40r580ykxmv8" path="res://Scenes/Level/Single Player/simon.gd" id="1_oqjac"]
[ext_resource type="Texture2D" uid="uid://b1oftsji72ml0" path="res://Graphics/MySprites/UI/MyPaper.png" id="2_7nh3p"]
[ext_resource type="Texture2D" uid="uid://02423g6l02aw" path="res://Graphics/MySprites/UI/Go Straight.png" id="3_k04p0"]
[ext_resource type="Texture2D" uid="uid://c7xn456hha7hk" path="res://Graphics/MySprites/UI/Go Straight Pushed.png" id="4_eva1v"]
[ext_resource type="Texture2D" uid="uid://cs4545ou8gkns" path="res://Graphics/MySprites/UI/TurnRight.png" id="4_skfan"]
[ext_resource type="Texture2D" uid="uid://3s4ckldhthpp" path="res://Graphics/MySprites/UI/TurnLeft.png" id="5_c8f16"]
[ext_resource type="Texture2D" uid="uid://6oulepiq2wr2" path="res://Graphics/MySprites/UI/TurnRight Pushed.png" id="6_v18ma"]
[ext_resource type="AudioStream" uid="uid://d3vwxk6el6l7b" path="res://Audio/School/Go straight.mp3" id="7_2pvuq"]
[ext_resource type="Texture2D" uid="uid://24s7qj85rn1x" path="res://Graphics/MySprites/UI/TurnLeft Pushed.png" id="8_tibqu"]

[node name="Simon" type="Node2D"]
script = ExtResource("1_oqjac")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_7nh3p")

[node name="Go straight audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2pvuq")
pitch_scale = 2.0

[node name="Turn right audio" type="AudioStreamPlayer" parent="."]

[node name="Turn left audio" type="AudioStreamPlayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Score : "

[node name="HighScore" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "High Score:"

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1365.0
offset_bottom = 767.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Go straight" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("3_k04p0")
texture_pressed = ExtResource("4_eva1v")

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 125
columns = 2

[node name="Turn left" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("5_c8f16")
texture_pressed = ExtResource("8_tibqu")

[node name="Turn right" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("4_skfan")
texture_pressed = ExtResource("6_v18ma")

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
visible = false
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="restart" type="Button" parent="CenterContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -46.0
offset_right = 65.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Restart"

[node name="PlayerTimeout" type="Timer" parent="."]
wait_time = 3.0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(33.9968, 19.1934)
color = Color(1, 1, 1, 0)

[connection signal="button_down" from="CenterContainer/VBoxContainer/CenterContainer/Go straight" to="." method="_on_go_straight_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/GridContainer/Turn left" to="." method="_on_turn_left_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/GridContainer/Turn right" to="." method="_on_turn_right_button_down"]
[connection signal="pressed" from="CenterContainer/ColorRect/restart" to="." method="_on_button_pressed"]
[connection signal="timeout" from="PlayerTimeout" to="." method="_on_player_timeout_timeout"]
